force-app/main/default/objects/Tarefa__c/fields/Atribuido_A__c.field-meta.xml
<CustomField>
    <fullName>Atribuido_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atribuído A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tarefas</relationshipName>
    <type>Lookup</type>
</CustomField>